New features
- Add to Trash
- Group file-related language strings together